--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,8 +39,7 @@ jobs:
         run: |
           .venv/bin/python -m pytest \
             -m "not flaky" \
-            tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
-            tests/contracts/ tests/data/ tests/security/ \
+            tests/ \
             --cov=core --cov=backtest --cov=execution \
             --cov-branch \
             --cov-report=xml --cov-report=term-missing --cov-report=html:coverage_html \
