--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: MIT
 [pytest]
 addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
-testpaths = tests
+testpaths = tests analytics/tests analytics/fpma/tests
 python_files = test_*.py
 asyncio_default_fixture_loop_scope = function
 markers =
