--- a/configs/exchanges/binance.sample.yaml
+++ b/configs/exchanges/binance.sample.yaml
@@ -8,9 +8,19 @@ execution:
         - BTCUSDT
         - ETHUSDT
       credentials:
-        api_key_env: BINANCE_API_KEY
-        api_secret_env: BINANCE_API_SECRET
-        vault_path_env: BINANCE_VAULT_PATH
+        env_prefix: BINANCE
+        required:
+          - API_KEY
+          - API_SECRET
+        optional:
+          - RECV_WINDOW
+        secret_backend:
+          adapter: vault
+          path_env: BINANCE_VAULT_PATH
+          field_mapping:
+            API_KEY: api_key
+            API_SECRET: api_secret
+            RECV_WINDOW: recv_window
       rate_limits:
         max_orders_per_second: 10
         max_orders_per_minute: 600
