--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -201,18 +201,44 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [python, go, cpp, rust]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v5
-    
+
+    - name: Set up Python
+      if: matrix.language == 'python'
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.11'
+
+    - name: Set up Go
+      if: matrix.language == 'go'
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.22'
+
+    - name: Set up Rust
+      if: matrix.language == 'rust'
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v4
       with:
-        languages: python
+        languages: ${{ matrix.language }}
         queries: security-extended
-    
+
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v4
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
       with:
-        category: "/language:python"
+        category: "/language:${{ matrix.language }}"
