--- a/deploy/tradepulse-deployment.yaml
+++ b/deploy/tradepulse-deployment.yaml
@@ -66,7 +66,7 @@ spec:
               name: metrics
           livenessProbe:
             httpGet:
-              path: /healthz
+              path: /health
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
@@ -74,7 +74,7 @@ spec:
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /readyz
+              path: /health
               port: http
             initialDelaySeconds: 10
             periodSeconds: 10
@@ -82,7 +82,7 @@ spec:
             failureThreshold: 3
           startupProbe:
             httpGet:
-              path: /healthz
+              path: /health
               port: http
             initialDelaySeconds: 10
             periodSeconds: 5
