--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ ccxt>=4.5.10
 tenacity>=9.1.2
 aiolimiter>=1.2.1
 fastapi>=0.119.0,<1.0.0
+psycopg[binary]>=3.2.1
+clickhouse-connect>=0.7.18
+pyarrow>=21.0.0
 
 # Optional feature store backends are available via `pip install tradepulse[feature_store]`
 
