--- a/deploy/prometheus.yml
+++ b/deploy/prometheus.yml
@@ -1,7 +1,26 @@
 # SPDX-License-Identifier: MIT
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ['alertmanager:9093']
+
+rule_files:
+  - /etc/prometheus/rules/alerts.yaml
+
 scrape_configs:
-  - job_name: 'nfpro'
+  - job_name: 'tradepulse'
+    metrics_path: /metrics
     static_configs:
       - targets: ['tradepulse:8001']
+
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node-exporter:9100']
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
