--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,54 @@ services:
     build: .
     ports: ["8001:8001"]
     restart: unless-stopped
+    labels:
+      - "co.elastic.logs/enabled=true"
+      - "co.elastic.logs/module=tradepulse"
+    depends_on:
+      - logstash
   prometheus:
     image: prom/prometheus
     volumes:
       - ./deploy/prometheus.yml:/etc/prometheus/prometheus.yml
     ports: ["9090:9090"]
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.11.3
+    environment:
+      - xpack.monitoring.enabled=false
+    volumes:
+      - ./observability/logstash/pipeline:/usr/share/logstash/pipeline:ro
+    ports:
+      - "5044:5044"
+    depends_on:
+      - elasticsearch
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.3
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:8.11.3
+    user: root
+    command: ["filebeat", "-e", "-strict.perms=false", "-c", "/usr/share/filebeat/filebeat.yml"]
+    volumes:
+      - ./observability/logging/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    depends_on:
+      - logstash
+
+volumes:
+  elasticsearch-data:
