Reconcile observability compose conflicts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,24 @@ version: '3.9'
 services:
   tradepulse:
     build: .
-    ports: ["8001:8001"]
+    ports:
+      - "8001:8001"
     restart: unless-stopped
+    healthcheck:
+      test:
+        - "CMD"
+        - "python"
+        - "-c"
+        - "import urllib.request, sys; urllib.request.urlopen('http://localhost:8001/health', timeout=5.0)"
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     labels:
       - "co.elastic.logs/enabled=true"
       - "co.elastic.logs/module=tradepulse"
     depends_on:
+      - prometheus
       - logstash
   prometheus:
     image: prom/prometheus
