--- a/observability/logging/filebeat.docker.yml
+++ b/observability/logging/filebeat.docker.yml
@@ -1,19 +1,30 @@
 filebeat.autodiscover:
   providers:
     - type: docker
+      hints.enabled: false
       templates:
         - condition:
             equals:
               docker.labels.co.elastic.logs/enabled: "true"
           config:
             - type: filestream
-              id: tradepulse-container-logs
+              id: ${data.docker.container.labels.co.elastic.logs/module:tradepulse}-container-logs
               paths:
                 - /var/lib/docker/containers/${data.docker.container.id}/*.log
               parsers:
                 - ndjson:
                     overwrite_keys: true
                     add_error_key: true
+              processors:
+                - decode_json_fields:
+                    when:
+                      has_fields: ["message"]
+                    fields: ["message"]
+                    target: ""
+                    overwrite_keys: true
+                    add_error_key: true
+                - drop_fields:
+                    fields: ["input", "agent"]
               fields:
                 service.name: ${data.docker.container.labels.co.elastic.logs/module:tradepulse}
                 environment: local
@@ -23,8 +34,6 @@ filebeat.autodiscover:
 processors:
   - add_host_metadata: ~
   - add_process_metadata: ~
-  - drop_fields:
-      fields: ["input", "agent"]
 
 output.logstash:
   hosts: ["logstash:5044"]
